--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ python:
 # command to install dependencies
 install:
   - pip install .
-  - pip install -r requirements.txt
+  # - pip install -r requirements.txt
 # command to run tests
 script: python setup.py test
