--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ python:
 install:
   - pip install .
   - pip install -r requirements.txt
+  - pyb install_dependencies
+  
 # command to run tests
 script: pyb -v
